--- a/cnn/dynamic_deficit_cnn.ipynb
+++ b/cnn/dynamic_deficit_cnn.ipynb
@@ -73,7 +73,7 @@
       "metadata": {
         "id": "7BgtCd2okfpJ",
         "colab_type": "code",
-        "outputId": "dbc131ef-2a32-4896-e27a-0ab5e1769666",
+        "outputId": "af320913-9a95-4e8a-b822-590a4284f5a8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 0
@@ -232,8 +232,6 @@
         "\n",
         "    ''' Input Layer '''\n",
         "    # Reshape X to 4-D tensor: [batch_size, width, height, channels]\n",
-        "    input_layer = tf.reshape(features, [-1, NODE_COUNT, HISTORY, 1])\n",
-        "    \n",
         "    layer = tf.reshape(features, [-1, NODE_COUNT, HISTORY, 1])\n",
         "    \n",
         "    # Image length and width\n",
@@ -436,10 +434,10 @@
       "metadata": {
         "colab_type": "code",
         "id": "-g_WPM1M7R3G",
-        "outputId": "7de66bd3-78d8-4d80-a57a-2ceec65b2f3c",
+        "outputId": "988be24a-ba89-40fc-b5d6-de47d31b7874",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 615
+          "height": 598
         }
       },
       "source": [
@@ -465,48 +463,35 @@
           "output_type": "stream",
           "text": [
             "WARNING: Logging before flag parsing goes to stderr.\n",
-            "W0628 17:06:33.515393 140066262304640 estimator.py:1811] Using temporary folder as model directory: /tmp/tmp89bpjb_i\n",
-            "W0628 17:06:33.540589 140066262304640 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/training/training_util.py:236: Variable.initialized_value (from tensorflow.python.ops.variables) is deprecated and will be removed in a future version.\n",
+            "W0628 17:30:20.522617 140623611721600 estimator.py:1811] Using temporary folder as model directory: /tmp/tmp65l_i38v\n",
+            "W0628 17:30:20.546733 140623611721600 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/training/training_util.py:236: Variable.initialized_value (from tensorflow.python.ops.variables) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "Use Variable.read_value. Variables in 2.X are initialized automatically both in eager and graph (inside tf.defun) contexts.\n",
-            "W0628 17:06:33.563014 140066262304640 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow_estimator/python/estimator/inputs/queues/feeding_queue_runner.py:62: QueueRunner.__init__ (from tensorflow.python.training.queue_runner_impl) is deprecated and will be removed in a future version.\n",
+            "W0628 17:30:20.565991 140623611721600 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow_estimator/python/estimator/inputs/queues/feeding_queue_runner.py:62: QueueRunner.__init__ (from tensorflow.python.training.queue_runner_impl) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "To construct input pipelines, use the `tf.data` module.\n",
-            "W0628 17:06:33.565653 140066262304640 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow_estimator/python/estimator/inputs/queues/feeding_functions.py:500: add_queue_runner (from tensorflow.python.training.queue_runner_impl) is deprecated and will be removed in a future version.\n",
+            "W0628 17:30:20.568665 140623611721600 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow_estimator/python/estimator/inputs/queues/feeding_functions.py:500: add_queue_runner (from tensorflow.python.training.queue_runner_impl) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "To construct input pipelines, use the `tf.data` module.\n",
-            "W0628 17:06:33.582803 140066262304640 deprecation.py:323] From <ipython-input-6-15c70f0848e6>:22: conv2d (from tensorflow.python.layers.convolutional) is deprecated and will be removed in a future version.\n",
+            "W0628 17:30:20.586074 140623611721600 deprecation.py:323] From <ipython-input-6-69a39bdb877e>:23: conv2d (from tensorflow.python.layers.convolutional) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "Use `tf.keras.layers.Conv2D` instead.\n",
-            "W0628 17:06:33.586616 140066262304640 deprecation.py:506] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/ops/init_ops.py:1251: calling VarianceScaling.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
+            "W0628 17:30:20.589676 140623611721600 deprecation.py:506] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/ops/init_ops.py:1251: calling VarianceScaling.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "Call initializer instance with the dtype argument instead of passing it to the constructor\n",
-            "W0628 17:06:33.832284 140066262304640 deprecation.py:323] From <ipython-input-6-15c70f0848e6>:31: max_pooling2d (from tensorflow.python.layers.pooling) is deprecated and will be removed in a future version.\n",
+            "W0628 17:30:20.848395 140623611721600 deprecation.py:323] From <ipython-input-6-69a39bdb877e>:32: max_pooling2d (from tensorflow.python.layers.pooling) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "Use keras.layers.MaxPooling2D instead.\n",
-            "W0628 17:06:34.055290 140066262304640 deprecation.py:323] From <ipython-input-6-15c70f0848e6>:49: dense (from tensorflow.python.layers.core) is deprecated and will be removed in a future version.\n",
+            "W0628 17:30:21.029979 140623611721600 deprecation.py:323] From <ipython-input-6-69a39bdb877e>:48: dense (from tensorflow.python.layers.core) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
-            "Use keras.layers.dense instead.\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "SIZE: 1536\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "W0628 17:06:34.402923 140066262304640 deprecation.py:323] From <ipython-input-6-15c70f0848e6>:58: dropout (from tensorflow.python.layers.core) is deprecated and will be removed in a future version.\n",
+            "Use keras.layers.dense instead.\n",
+            "W0628 17:30:21.349712 140623611721600 deprecation.py:323] From <ipython-input-6-69a39bdb877e>:57: dropout (from tensorflow.python.layers.core) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "Use keras.layers.dropout instead.\n",
-            "W0628 17:06:34.506869 140066262304640 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/ops/losses/losses_impl.py:121: add_dispatch_support.<locals>.wrapper (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
+            "W0628 17:30:21.453883 140623611721600 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/ops/losses/losses_impl.py:121: add_dispatch_support.<locals>.wrapper (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "Use tf.where in 2.0, which has the same broadcast rule as np.where\n",
-            "W0628 17:06:35.481285 140066262304640 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/training/monitored_session.py:875: start_queue_runners (from tensorflow.python.training.queue_runner_impl) is deprecated and will be removed in a future version.\n",
+            "W0628 17:30:22.439726 140623611721600 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/training/monitored_session.py:875: start_queue_runners (from tensorflow.python.training.queue_runner_impl) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "To construct input pipelines, use the `tf.data` module.\n"
           ],
@@ -516,7 +501,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<tensorflow_estimator.python.estimator.estimator.Estimator at 0x7f636ec2ed30>"
+              "<tensorflow_estimator.python.estimator.estimator.Estimator at 0x7fe55a08e898>"
             ]
           },
           "metadata": {
@@ -543,9 +528,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 122
+          "height": 105
         },
-        "outputId": "62acb0da-34a3-474b-818d-def1cbc7ec14"
+        "outputId": "e3ab090e-fb5a-4266-f60d-482ed4f08d48"
       },
       "source": [
         "# Evaluate the model and print results\n",
@@ -563,14 +548,7 @@
         {
           "output_type": "stream",
           "text": [
-            "SIZE: 1536\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "W0628 17:19:56.073741 140066262304640 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/training/saver.py:1276: checkpoint_exists (from tensorflow.python.training.checkpoint_management) is deprecated and will be removed in a future version.\n",
+            "W0628 17:50:14.895588 140623611721600 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/training/saver.py:1276: checkpoint_exists (from tensorflow.python.training.checkpoint_management) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "Use standard file APIs to check for files with this prefix.\n"
           ],
@@ -579,7 +557,7 @@
         {
           "output_type": "stream",
           "text": [
-            "{'accuracy': 0.601, 'loss': 0.6592275, 'global_step': 100000}\n"
+            "{'accuracy': 0.62, 'loss': 0.6546517, 'global_step': 100000}\n"
           ],
           "name": "stdout"
         }
