removed all outputs

--- a/cnn/deficit_cnn.ipynb
+++ b/cnn/deficit_cnn.ipynb
@@ -459,11 +459,7 @@
       "metadata": {
         "id": "OAQ1ZDce0pSJ",
         "colab_type": "code",
-        "outputId": "de26b1bb-b039-4397-993c-d988a7c0f4df",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
+        "colab": {}
       },
       "source": [
         "drive.mount('/content/gdrive')\n",
@@ -476,26 +472,14 @@
         "os.environ['TF_CPP_MIN_LOG_LEVEL'] = '2' "
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "bSFmSDsQnE-s",
         "colab_type": "code",
-        "outputId": "465ad8ad-e81d-431b-f73c-36e2f780aeb8",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 666
-        }
+        "colab": {}
       },
       "source": [
         "data_folder = \"e5_prob_of_death_at_80/\"\n",
@@ -533,51 +517,7 @@
         "                        run(\"unbiased_eval_results.txt\")"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "WARNING: Logging before flag parsing goes to stderr.\n",
-            "W0705 20:51:54.216681 140191097927552 estimator.py:1811] Using temporary folder as model directory: /tmp/tmpzr9fi7ln\n",
-            "W0705 20:51:54.240367 140191097927552 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/training/training_util.py:236: Variable.initialized_value (from tensorflow.python.ops.variables) is deprecated and will be removed in a future version.\n",
-            "Instructions for updating:\n",
-            "Use Variable.read_value. Variables in 2.X are initialized automatically both in eager and graph (inside tf.defun) contexts.\n",
-            "W0705 20:51:54.262816 140191097927552 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow_estimator/python/estimator/inputs/queues/feeding_queue_runner.py:62: QueueRunner.__init__ (from tensorflow.python.training.queue_runner_impl) is deprecated and will be removed in a future version.\n",
-            "Instructions for updating:\n",
-            "To construct input pipelines, use the `tf.data` module.\n",
-            "W0705 20:51:54.265631 140191097927552 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow_estimator/python/estimator/inputs/queues/feeding_functions.py:500: add_queue_runner (from tensorflow.python.training.queue_runner_impl) is deprecated and will be removed in a future version.\n",
-            "Instructions for updating:\n",
-            "To construct input pipelines, use the `tf.data` module.\n",
-            "W0705 20:51:54.282280 140191097927552 deprecation.py:323] From <ipython-input-6-af479cb0f00a>:21: conv2d (from tensorflow.python.layers.convolutional) is deprecated and will be removed in a future version.\n",
-            "Instructions for updating:\n",
-            "Use `tf.keras.layers.Conv2D` instead.\n",
-            "W0705 20:51:54.286722 140191097927552 deprecation.py:506] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/ops/init_ops.py:1251: calling VarianceScaling.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
-            "Instructions for updating:\n",
-            "Call initializer instance with the dtype argument instead of passing it to the constructor\n",
-            "W0705 20:51:54.535326 140191097927552 deprecation.py:323] From <ipython-input-6-af479cb0f00a>:30: max_pooling2d (from tensorflow.python.layers.pooling) is deprecated and will be removed in a future version.\n",
-            "Instructions for updating:\n",
-            "Use keras.layers.MaxPooling2D instead.\n",
-            "W0705 20:51:54.699885 140191097927552 deprecation.py:323] From <ipython-input-6-af479cb0f00a>:46: dense (from tensorflow.python.layers.core) is deprecated and will be removed in a future version.\n",
-            "Instructions for updating:\n",
-            "Use keras.layers.dense instead.\n",
-            "W0705 20:51:55.031250 140191097927552 deprecation.py:323] From <ipython-input-6-af479cb0f00a>:55: dropout (from tensorflow.python.layers.core) is deprecated and will be removed in a future version.\n",
-            "Instructions for updating:\n",
-            "Use keras.layers.dropout instead.\n",
-            "W0705 20:51:55.134387 140191097927552 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/ops/losses/losses_impl.py:121: add_dispatch_support.<locals>.wrapper (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
-            "Instructions for updating:\n",
-            "Use tf.where in 2.0, which has the same broadcast rule as np.where\n",
-            "W0705 20:51:56.065618 140191097927552 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/training/monitored_session.py:875: start_queue_runners (from tensorflow.python.training.queue_runner_impl) is deprecated and will be removed in a future version.\n",
-            "Instructions for updating:\n",
-            "To construct input pipelines, use the `tf.data` module.\n",
-            "W0705 21:10:15.173702 140191097927552 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow/python/training/saver.py:1276: checkpoint_exists (from tensorflow.python.training.checkpoint_management) is deprecated and will be removed in a future version.\n",
-            "Instructions for updating:\n",
-            "Use standard file APIs to check for files with this prefix.\n",
-            "W0705 21:10:24.531101 140191097927552 estimator.py:1811] Using temporary folder as model directory: /tmp/tmpyt1mr_42\n",
-            "W0705 21:32:13.339502 140191097927552 estimator.py:1811] Using temporary folder as model directory: /tmp/tmpidzbsmq0\n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "outputs": []
     }
   ]
 }
